@@ -7,6 +7,7 @@
 * Updated text clipping algorithm for tk::Button.
 * Fixed bun in tk::ListBox widget which didn't allow to scroll the list box
   when using keyboard keys.
+* Implemented TabGroup widget.
 * Implemented shortcut handling mechancs by tk::Window.
 * Small bugfix in LedMeterChannel related to header display.
 * Updated build scripts.
